--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.5",
     "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "randomstring": "^1.2.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3"
   }
 }
